Proyecto con foto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Diagramación por Flex</title>
 </head>
 <body>
-    
+    <div id="padre">
+        <div id="hijo1"></div>
+        <div id="hijo2"></div>
+        <div id="hijo3"></div>
+        <div id="hijo4"></div>
+    </div>
+
+    <div class="fondo"></div>
+
+    <div class="espacio"></div>
+
+    <p class="textos">
+        <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, consequuntur provident optio ipsum suscipit natus aliquam quos illum impedit veritatis vero est, atque nisi. Nesciunt nulla accusamus laborum reiciendis voluptates!</span><span>Illum fuga officia consequuntur. Illo eum reiciendis dolores animi possimus excepturi architecto recusandae sint ut aliquid laudantium doloribus sequi ad perspiciatis pariatur quasi, alias debitis officia corrupti facilis nam quaerat.</span><span>Cumque debitis unde vel aperiam tenetur voluptate dolorum? Odit pariatur enim quibusdam. Eligendi exercitationem expedita cum dolorem amet quia repellendus? Officiis distinctio molestias minima reiciendis. Molestias inventore molestiae eaque! Repellendus.</span><span>Libero quam eveniet officia ea et culpa eaque magnam expedita ex consequatur deleniti unde veniam, est, vel ratione labore veritatis alias? Quidem accusamus necessitatibus fuga tenetur doloribus culpa maiores eveniet.</span><span>Dignissimos, maxime ipsam. Corrupti enim numquam ab in odit consequatur sequi quibusdam ex obcaecati minima! Mollitia ipsam nam in, nulla soluta optio suscipit est, perferendis ex dignissimos quibusdam dolorum explicabo!</span><span>Et facere corporis molestiae voluptas nostrum! Repellendus maiores, iure minima non itaque dolores, pariatur assumenda tempora maxime dolore labore ex sit corporis iste incidunt, quam praesentium tempore eius unde culpa?</span><span>Temporibus corporis deserunt incidunt repudiandae ea minima explicabo dolor itaque quo velit voluptatibus veritatis non id delectus odit possimus obcaecati ducimus quis exercitationem labore, est expedita magni suscipit. Quo, alias.</span><span>Beatae, ipsa! Consequuntur, omnis doloremque aliquid et laboriosam voluptatibus, quos necessitatibus neque itaque sunt dolore optio. Nostrum eius consectetur sit ea, illo ducimus provident. Id maiores excepturi tempore velit natus.</span><span>Placeat, minus omnis nulla obcaecati nesciunt tempora architecto quod a corporis, numquam eveniet mollitia ex nobis necessitatibus in laboriosam. Consequatur vitae ex commodi perferendis debitis natus est saepe expedita temporibus.</span><span>Ratione quia expedita vitae soluta ipsa voluptatem nesciunt nihil. Voluptas soluta consectetur quaerat quasi cupiditate voluptatibus impedit beatae porro accusamus dolor ipsa rem sed inventore, ullam non esse atque similique!</span>
+    </p>
+
 </body>
 </html>
